--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-progress": "^1.1.7",
@@ -22,6 +23,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.460.0",
+    "monaco-editor": "^0.52.2",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
